// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/tree/demo/basic.md correctly 1`] = `
<ul
  class="ant-tree ant-tree-icon-hide"
  role="tree"
  unselectable="on"
>
  <li
    class="ant-tree-treenode-switcher-open ant-tree-treenode-checkbox-checked"
    role="treeitem"
  >
    <span
      class="ant-tree-switcher ant-tree-switcher_open"
    >
      <span
        aria-label="caret-down"
        class="anticon anticon-caret-down ant-tree-switcher-icon"
        role="img"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="caret-down"
          fill="currentColor"
          focusable="false"
          height="1em"
          style="vertical-align:-0.125em"
          viewBox="0 0 1024 1024"
          width="1em"
        >
          <path
            d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
          />
        </svg>
      </span>
    </span>
    <span
      class="ant-tree-checkbox ant-tree-checkbox-checked"
    >
      <span
        class="ant-tree-checkbox-inner"
      />
    </span>
    <span
      class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-open"
      title="parent 1"
    >
      <span
        class="ant-tree-title"
      >
        parent 1
      </span>
    </span>
    <ul
      class="ant-tree-child-tree ant-tree-child-tree-open"
      data-expanded="true"
      role="group"
    >
      <li
        class="ant-tree-treenode-disabled ant-tree-treenode-switcher-open ant-tree-treenode-checkbox-checked ant-tree-treenode-selected"
        role="treeitem"
      >
        <span
          class="ant-tree-switcher ant-tree-switcher_open"
        >
          <span
            aria-label="caret-down"
            class="anticon anticon-caret-down ant-tree-switcher-icon"
            role="img"
          >
            <svg
              aria-hidden="true"
              class=""
              data-icon="caret-down"
              fill="currentColor"
              focusable="false"
              height="1em"
              style="vertical-align:-0.125em"
              viewBox="0 0 1024 1024"
              width="1em"
            >
              <path
                d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
              />
            </svg>
          </span>
        </span>
        <span
          class="ant-tree-checkbox ant-tree-checkbox-checked ant-tree-checkbox-disabled"
        >
          <span
            class="ant-tree-checkbox-inner"
          />
        </span>
        <span
          class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-open"
          title="parent 1-0"
        >
          <span
            class="ant-tree-title"
          >
            parent 1-0
          </span>
        </span>
        <ul
          class="ant-tree-child-tree ant-tree-child-tree-open"
          data-expanded="true"
          role="group"
        >
          <li
            class="ant-tree-treenode-switcher-close"
            role="treeitem"
          >
            <span
              class="ant-tree-switcher ant-tree-switcher-noop"
            />
            <span
              class="ant-tree-checkbox ant-tree-checkbox-disabled"
            >
              <span
                class="ant-tree-checkbox-inner"
              />
            </span>
            <span
              class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
              title="leaf"
            >
              <span
                class="ant-tree-title"
              >
                leaf
              </span>
            </span>
          </li>
          <li
            class="ant-tree-treenode-switcher-close"
            role="treeitem"
          >
            <span
              class="ant-tree-switcher ant-tree-switcher-noop"
            />
            <span
              class="ant-tree-checkbox"
            >
              <span
                class="ant-tree-checkbox-inner"
              />
            </span>
            <span
              class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
              title="leaf"
            >
              <span
                class="ant-tree-title"
              >
                leaf
              </span>
            </span>
          </li>
        </ul>
      </li>
      <li
        class="ant-tree-treenode-switcher-open ant-tree-treenode-checkbox-checked"
        role="treeitem"
      >
        <span
          class="ant-tree-switcher ant-tree-switcher_open"
        >
          <span
            aria-label="caret-down"
            class="anticon anticon-caret-down ant-tree-switcher-icon"
            role="img"
          >
            <svg
              aria-hidden="true"
              class=""
              data-icon="caret-down"
              fill="currentColor"
              focusable="false"
              height="1em"
              style="vertical-align:-0.125em"
              viewBox="0 0 1024 1024"
              width="1em"
            >
              <path
                d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
              />
            </svg>
          </span>
        </span>
        <span
          class="ant-tree-checkbox ant-tree-checkbox-checked"
        >
          <span
            class="ant-tree-checkbox-inner"
          />
        </span>
        <span
          class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-open"
          title="parent 1-1"
        >
          <span
            class="ant-tree-title"
          >
            parent 1-1
          </span>
        </span>
        <ul
          class="ant-tree-child-tree ant-tree-child-tree-open"
          data-expanded="true"
          role="group"
        >
          <li
            class="ant-tree-treenode-switcher-close ant-tree-treenode-checkbox-checked"
            role="treeitem"
          >
            <span
              class="ant-tree-switcher ant-tree-switcher-noop"
            />
            <span
              class="ant-tree-checkbox ant-tree-checkbox-checked"
            >
              <span
                class="ant-tree-checkbox-inner"
              />
            </span>
            <span
              class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
              title=""
            >
              <span
                class="ant-tree-title"
              >
                <span
                  style="color:#1890ff"
                >
                  sss
                </span>
              </span>
            </span>
          </li>
        </ul>
      </li>
    </ul>
  </li>
</ul>
`;

exports[`renders ./components/tree/demo/basic-controlled.md correctly 1`] = `
<ul
  class="ant-tree ant-tree-icon-hide"
  role="tree"
  unselectable="on"
>
  <li
    class="ant-tree-treenode-switcher-open ant-tree-treenode-checkbox-indeterminate"
    role="treeitem"
  >
    <span
      class="ant-tree-switcher ant-tree-switcher_open"
    >
      <span
        aria-label="caret-down"
        class="anticon anticon-caret-down ant-tree-switcher-icon"
        role="img"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="caret-down"
          fill="currentColor"
          focusable="false"
          height="1em"
          style="vertical-align:-0.125em"
          viewBox="0 0 1024 1024"
          width="1em"
        >
          <path
            d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
          />
        </svg>
      </span>
    </span>
    <span
      class="ant-tree-checkbox ant-tree-checkbox-indeterminate"
    >
      <span
        class="ant-tree-checkbox-inner"
      />
    </span>
    <span
      class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-open"
      title="0-0"
    >
      <span
        class="ant-tree-title"
      >
        0-0
      </span>
    </span>
    <ul
      class="ant-tree-child-tree ant-tree-child-tree-open"
      data-expanded="true"
      role="group"
    >
      <li
        class="ant-tree-treenode-switcher-open ant-tree-treenode-checkbox-checked"
        role="treeitem"
      >
        <span
          class="ant-tree-switcher ant-tree-switcher_open"
        >
          <span
            aria-label="caret-down"
            class="anticon anticon-caret-down ant-tree-switcher-icon"
            role="img"
          >
            <svg
              aria-hidden="true"
              class=""
              data-icon="caret-down"
              fill="currentColor"
              focusable="false"
              height="1em"
              style="vertical-align:-0.125em"
              viewBox="0 0 1024 1024"
              width="1em"
            >
              <path
                d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
              />
            </svg>
          </span>
        </span>
        <span
          class="ant-tree-checkbox ant-tree-checkbox-checked"
        >
          <span
            class="ant-tree-checkbox-inner"
          />
        </span>
        <span
          class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-open"
          title="0-0-0"
        >
          <span
            class="ant-tree-title"
          >
            0-0-0
          </span>
        </span>
        <ul
          class="ant-tree-child-tree ant-tree-child-tree-open"
          data-expanded="true"
          role="group"
        >
          <li
            class="ant-tree-treenode-switcher-close ant-tree-treenode-checkbox-checked"
            role="treeitem"
          >
            <span
              class="ant-tree-switcher ant-tree-switcher-noop"
            />
            <span
              class="ant-tree-checkbox ant-tree-checkbox-checked"
            >
              <span
                class="ant-tree-checkbox-inner"
              />
            </span>
            <span
              class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
              title="0-0-0-0"
            >
              <span
                class="ant-tree-title"
              >
                0-0-0-0
              </span>
            </span>
          </li>
          <li
            class="ant-tree-treenode-switcher-close ant-tree-treenode-checkbox-checked"
            role="treeitem"
          >
            <span
              class="ant-tree-switcher ant-tree-switcher-noop"
            />
            <span
              class="ant-tree-checkbox ant-tree-checkbox-checked"
            >
              <span
                class="ant-tree-checkbox-inner"
              />
            </span>
            <span
              class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
              title="0-0-0-1"
            >
              <span
                class="ant-tree-title"
              >
                0-0-0-1
              </span>
            </span>
          </li>
          <li
            class="ant-tree-treenode-switcher-close ant-tree-treenode-checkbox-checked"
            role="treeitem"
          >
            <span
              class="ant-tree-switcher ant-tree-switcher-noop"
            />
            <span
              class="ant-tree-checkbox ant-tree-checkbox-checked"
            >
              <span
                class="ant-tree-checkbox-inner"
              />
            </span>
            <span
              class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
              title="0-0-0-2"
            >
              <span
                class="ant-tree-title"
              >
                0-0-0-2
              </span>
            </span>
          </li>
        </ul>
      </li>
      <li
        class="ant-tree-treenode-switcher-open"
        role="treeitem"
      >
        <span
          class="ant-tree-switcher ant-tree-switcher_open"
        >
          <span
            aria-label="caret-down"
            class="anticon anticon-caret-down ant-tree-switcher-icon"
            role="img"
          >
            <svg
              aria-hidden="true"
              class=""
              data-icon="caret-down"
              fill="currentColor"
              focusable="false"
              height="1em"
              style="vertical-align:-0.125em"
              viewBox="0 0 1024 1024"
              width="1em"
            >
              <path
                d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
              />
            </svg>
          </span>
        </span>
        <span
          class="ant-tree-checkbox"
        >
          <span
            class="ant-tree-checkbox-inner"
          />
        </span>
        <span
          class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-open"
          title="0-0-1"
        >
          <span
            class="ant-tree-title"
          >
            0-0-1
          </span>
        </span>
        <ul
          class="ant-tree-child-tree ant-tree-child-tree-open"
          data-expanded="true"
          role="group"
        >
          <li
            class="ant-tree-treenode-switcher-close"
            role="treeitem"
          >
            <span
              class="ant-tree-switcher ant-tree-switcher-noop"
            />
            <span
              class="ant-tree-checkbox"
            >
              <span
                class="ant-tree-checkbox-inner"
              />
            </span>
            <span
              class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
              title="0-0-1-0"
            >
              <span
                class="ant-tree-title"
              >
                0-0-1-0
              </span>
            </span>
          </li>
          <li
            class="ant-tree-treenode-switcher-close"
            role="treeitem"
          >
            <span
              class="ant-tree-switcher ant-tree-switcher-noop"
            />
            <span
              class="ant-tree-checkbox"
            >
              <span
                class="ant-tree-checkbox-inner"
              />
            </span>
            <span
              class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
              title="0-0-1-1"
            >
              <span
                class="ant-tree-title"
              >
                0-0-1-1
              </span>
            </span>
          </li>
          <li
            class="ant-tree-treenode-switcher-close"
            role="treeitem"
          >
            <span
              class="ant-tree-switcher ant-tree-switcher-noop"
            />
            <span
              class="ant-tree-checkbox"
            >
              <span
                class="ant-tree-checkbox-inner"
              />
            </span>
            <span
              class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
              title="0-0-1-2"
            >
              <span
                class="ant-tree-title"
              >
                0-0-1-2
              </span>
            </span>
          </li>
        </ul>
      </li>
      <li
        class="ant-tree-treenode-switcher-close"
        role="treeitem"
      >
        <span
          class="ant-tree-switcher ant-tree-switcher-noop"
        />
        <span
          class="ant-tree-checkbox"
        >
          <span
            class="ant-tree-checkbox-inner"
          />
        </span>
        <span
          class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
          title="0-0-2"
        >
          <span
            class="ant-tree-title"
          >
            0-0-2
          </span>
        </span>
      </li>
    </ul>
  </li>
  <li
    class="ant-tree-treenode-switcher-close"
    role="treeitem"
  >
    <span
      class="ant-tree-switcher ant-tree-switcher_close"
    >
      <span
        aria-label="caret-down"
        class="anticon anticon-caret-down ant-tree-switcher-icon"
        role="img"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="caret-down"
          fill="currentColor"
          focusable="false"
          height="1em"
          style="vertical-align:-0.125em"
          viewBox="0 0 1024 1024"
          width="1em"
        >
          <path
            d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
          />
        </svg>
      </span>
    </span>
    <span
      class="ant-tree-checkbox"
    >
      <span
        class="ant-tree-checkbox-inner"
      />
    </span>
    <span
      class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-close"
      title="0-1"
    >
      <span
        class="ant-tree-title"
      >
        0-1
      </span>
    </span>
  </li>
  <li
    class="ant-tree-treenode-switcher-close"
    role="treeitem"
  >
    <span
      class="ant-tree-switcher ant-tree-switcher-noop"
    />
    <span
      class="ant-tree-checkbox"
    >
      <span
        class="ant-tree-checkbox-inner"
      />
    </span>
    <span
      class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
      title="0-2"
    >
      <span
        class="ant-tree-title"
      >
        0-2
      </span>
    </span>
  </li>
</ul>
`;

exports[`renders ./components/tree/demo/customized-icon.md correctly 1`] = `
<ul
  class="ant-tree"
  role="tree"
  unselectable="on"
>
  <li
    class="ant-tree-treenode-switcher-open"
    role="treeitem"
  >
    <span
      class="ant-tree-switcher ant-tree-switcher_open"
    >
      <span
        class="anticon ant-tree-switcher-icon"
        role="img"
      >
        <svg
          aria-hidden="true"
          class=""
          fill="currentColor"
          focusable="false"
          height="1em"
          width="1em"
        >
          <use
            href="#icon-down-o"
          />
        </svg>
      </span>
    </span>
    <span
      class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-open"
      title="parent 1"
    >
      <span
        class="ant-tree-iconEle ant-tree-icon__customize"
      >
        <span
          class="anticon"
          role="img"
        >
          <svg
            aria-hidden="true"
            class=""
            fill="currentColor"
            focusable="false"
            height="1em"
            width="1em"
          >
            <use
              href="#icon-smile-o"
            />
          </svg>
        </span>
      </span>
      <span
        class="ant-tree-title"
      >
        parent 1
      </span>
    </span>
    <ul
      class="ant-tree-child-tree ant-tree-child-tree-open"
      data-expanded="true"
      role="group"
    >
      <li
        class="ant-tree-treenode-switcher-open ant-tree-treenode-selected"
        role="treeitem"
      >
        <span
          class="ant-tree-switcher ant-tree-switcher-noop"
        />
        <span
          class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal ant-tree-node-selected"
          title="leaf"
        >
          <span
            class="ant-tree-iconEle ant-tree-icon__customize"
          >
            <span
              class="anticon"
              role="img"
            >
              <svg
                aria-hidden="true"
                class=""
                fill="currentColor"
                focusable="false"
                height="1em"
                width="1em"
              >
                <use
                  href="#icon-meh-o"
                />
              </svg>
            </span>
          </span>
          <span
            class="ant-tree-title"
          >
            leaf
          </span>
        </span>
      </li>
      <li
        class="ant-tree-treenode-switcher-open"
        role="treeitem"
      >
        <span
          class="ant-tree-switcher ant-tree-switcher-noop"
        />
        <span
          class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
          title="leaf"
        >
          <span
            class="ant-tree-iconEle ant-tree-icon__customize"
          >
            <span
              class="anticon"
              role="img"
            >
              <svg
                aria-hidden="true"
                class=""
                fill="currentColor"
                focusable="false"
                height="1em"
                width="1em"
              >
                <use
                  href="#icon-frown-o"
                />
              </svg>
            </span>
          </span>
          <span
            class="ant-tree-title"
          >
            leaf
          </span>
        </span>
      </li>
    </ul>
  </li>
</ul>
`;

exports[`renders ./components/tree/demo/directory.md correctly 1`] = `
<ul
  class="ant-tree ant-tree-directory"
  role="tree"
  unselectable="on"
>
  <li
    class="ant-tree-treenode-switcher-open"
    role="treeitem"
  >
    <span
      class="ant-tree-switcher ant-tree-switcher_open"
    >
      <span
        aria-label="caret-down"
        class="anticon anticon-caret-down ant-tree-switcher-icon"
        role="img"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="caret-down"
          fill="currentColor"
          focusable="false"
          height="1em"
          style="vertical-align:-0.125em"
          viewBox="0 0 1024 1024"
          width="1em"
        >
          <path
            d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
          />
        </svg>
      </span>
    </span>
    <span
      class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-open"
      title="parent 0"
    >
      <span
        class="ant-tree-iconEle ant-tree-icon__customize"
      >
        <span
          aria-label="folder-open"
          class="anticon anticon-folder-open"
          role="img"
        >
          <svg
            aria-hidden="true"
            class=""
            data-icon="folder-open"
            fill="currentColor"
            focusable="false"
            height="1em"
            style="vertical-align:-0.125em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M928 444H820V330.4c0-17.7-14.3-32-32-32H473L355.7 186.2a8.15 8.15 0 00-5.5-2.2H96c-17.7 0-32 14.3-32 32v592c0 17.7 14.3 32 32 32h698c13 0 24.8-7.9 29.7-20l134-332c1.5-3.8 2.3-7.9 2.3-12 0-17.7-14.3-32-32-32zM136 256h188.5l119.6 114.4H748V444H238c-13 0-24.8 7.9-29.7 20L136 643.2V256zm635.3 512H159l103.3-256h612.4L771.3 768z"
            />
          </svg>
        </span>
      </span>
      <span
        class="ant-tree-title"
      >
        parent 0
      </span>
    </span>
    <ul
      class="ant-tree-child-tree ant-tree-child-tree-open"
      data-expanded="true"
      role="group"
    >
      <li
        class=""
        role="treeitem"
      >
        <span
          class="ant-tree-switcher ant-tree-switcher-noop"
        />
        <span
          class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
          title="leaf 0-0"
        >
          <span
            class="ant-tree-iconEle ant-tree-icon__customize"
          >
            <span
              aria-label="file"
              class="anticon anticon-file"
              role="img"
            >
              <svg
                aria-hidden="true"
                class=""
                data-icon="file"
                fill="currentColor"
                focusable="false"
                height="1em"
                style="vertical-align:-0.125em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M854.6 288.6L639.4 73.4c-6-6-14.1-9.4-22.6-9.4H192c-17.7 0-32 14.3-32 32v832c0 17.7 14.3 32 32 32h640c17.7 0 32-14.3 32-32V311.3c0-8.5-3.4-16.7-9.4-22.7zM790.2 326H602V137.8L790.2 326zm1.8 562H232V136h302v216a42 42 0 0042 42h216v494z"
                />
              </svg>
            </span>
          </span>
          <span
            class="ant-tree-title"
          >
            leaf 0-0
          </span>
        </span>
      </li>
      <li
        class=""
        role="treeitem"
      >
        <span
          class="ant-tree-switcher ant-tree-switcher-noop"
        />
        <span
          class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
          title="leaf 0-1"
        >
          <span
            class="ant-tree-iconEle ant-tree-icon__customize"
          >
            <span
              aria-label="file"
              class="anticon anticon-file"
              role="img"
            >
              <svg
                aria-hidden="true"
                class=""
                data-icon="file"
                fill="currentColor"
                focusable="false"
                height="1em"
                style="vertical-align:-0.125em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M854.6 288.6L639.4 73.4c-6-6-14.1-9.4-22.6-9.4H192c-17.7 0-32 14.3-32 32v832c0 17.7 14.3 32 32 32h640c17.7 0 32-14.3 32-32V311.3c0-8.5-3.4-16.7-9.4-22.7zM790.2 326H602V137.8L790.2 326zm1.8 562H232V136h302v216a42 42 0 0042 42h216v494z"
                />
              </svg>
            </span>
          </span>
          <span
            class="ant-tree-title"
          >
            leaf 0-1
          </span>
        </span>
      </li>
    </ul>
  </li>
  <li
    class="ant-tree-treenode-switcher-open"
    role="treeitem"
  >
    <span
      class="ant-tree-switcher ant-tree-switcher_open"
    >
      <span
        aria-label="caret-down"
        class="anticon anticon-caret-down ant-tree-switcher-icon"
        role="img"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="caret-down"
          fill="currentColor"
          focusable="false"
          height="1em"
          style="vertical-align:-0.125em"
          viewBox="0 0 1024 1024"
          width="1em"
        >
          <path
            d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
          />
        </svg>
      </span>
    </span>
    <span
      class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-open"
      title="parent 1"
    >
      <span
        class="ant-tree-iconEle ant-tree-icon__customize"
      >
        <span
          aria-label="folder-open"
          class="anticon anticon-folder-open"
          role="img"
        >
          <svg
            aria-hidden="true"
            class=""
            data-icon="folder-open"
            fill="currentColor"
            focusable="false"
            height="1em"
            style="vertical-align:-0.125em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M928 444H820V330.4c0-17.7-14.3-32-32-32H473L355.7 186.2a8.15 8.15 0 00-5.5-2.2H96c-17.7 0-32 14.3-32 32v592c0 17.7 14.3 32 32 32h698c13 0 24.8-7.9 29.7-20l134-332c1.5-3.8 2.3-7.9 2.3-12 0-17.7-14.3-32-32-32zM136 256h188.5l119.6 114.4H748V444H238c-13 0-24.8 7.9-29.7 20L136 643.2V256zm635.3 512H159l103.3-256h612.4L771.3 768z"
            />
          </svg>
        </span>
      </span>
      <span
        class="ant-tree-title"
      >
        parent 1
      </span>
    </span>
    <ul
      class="ant-tree-child-tree ant-tree-child-tree-open"
      data-expanded="true"
      role="group"
    >
      <li
        class=""
        role="treeitem"
      >
        <span
          class="ant-tree-switcher ant-tree-switcher-noop"
        />
        <span
          class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
          title="leaf 1-0"
        >
          <span
            class="ant-tree-iconEle ant-tree-icon__customize"
          >
            <span
              aria-label="file"
              class="anticon anticon-file"
              role="img"
            >
              <svg
                aria-hidden="true"
                class=""
                data-icon="file"
                fill="currentColor"
                focusable="false"
                height="1em"
                style="vertical-align:-0.125em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M854.6 288.6L639.4 73.4c-6-6-14.1-9.4-22.6-9.4H192c-17.7 0-32 14.3-32 32v832c0 17.7 14.3 32 32 32h640c17.7 0 32-14.3 32-32V311.3c0-8.5-3.4-16.7-9.4-22.7zM790.2 326H602V137.8L790.2 326zm1.8 562H232V136h302v216a42 42 0 0042 42h216v494z"
                />
              </svg>
            </span>
          </span>
          <span
            class="ant-tree-title"
          >
            leaf 1-0
          </span>
        </span>
      </li>
      <li
        class=""
        role="treeitem"
      >
        <span
          class="ant-tree-switcher ant-tree-switcher-noop"
        />
        <span
          class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
          title="leaf 1-1"
        >
          <span
            class="ant-tree-iconEle ant-tree-icon__customize"
          >
            <span
              aria-label="file"
              class="anticon anticon-file"
              role="img"
            >
              <svg
                aria-hidden="true"
                class=""
                data-icon="file"
                fill="currentColor"
                focusable="false"
                height="1em"
                style="vertical-align:-0.125em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M854.6 288.6L639.4 73.4c-6-6-14.1-9.4-22.6-9.4H192c-17.7 0-32 14.3-32 32v832c0 17.7 14.3 32 32 32h640c17.7 0 32-14.3 32-32V311.3c0-8.5-3.4-16.7-9.4-22.7zM790.2 326H602V137.8L790.2 326zm1.8 562H232V136h302v216a42 42 0 0042 42h216v494z"
                />
              </svg>
            </span>
          </span>
          <span
            class="ant-tree-title"
          >
            leaf 1-1
          </span>
        </span>
      </li>
    </ul>
  </li>
</ul>
`;

exports[`renders ./components/tree/demo/draggable.md correctly 1`] = `
<ul
  class="ant-tree draggable-tree ant-tree-icon-hide ant-tree-block-node"
  role="tree"
  unselectable="on"
>
  <li
    class="ant-tree-treenode-switcher-open"
    role="treeitem"
  >
    <span
      class="ant-tree-switcher ant-tree-switcher_open"
    >
      <span
        aria-label="caret-down"
        class="anticon anticon-caret-down ant-tree-switcher-icon"
        role="img"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="caret-down"
          fill="currentColor"
          focusable="false"
          height="1em"
          style="vertical-align:-0.125em"
          viewBox="0 0 1024 1024"
          width="1em"
        >
          <path
            d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
          />
        </svg>
      </span>
    </span>
    <span
      aria-grabbed="true"
      class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-open draggable"
      draggable="true"
      title="0-0"
    >
      <span
        class="ant-tree-title"
      >
        0-0
      </span>
    </span>
    <ul
      class="ant-tree-child-tree ant-tree-child-tree-open"
      data-expanded="true"
      role="group"
    >
      <li
        class="ant-tree-treenode-switcher-open"
        role="treeitem"
      >
        <span
          class="ant-tree-switcher ant-tree-switcher_open"
        >
          <span
            aria-label="caret-down"
            class="anticon anticon-caret-down ant-tree-switcher-icon"
            role="img"
          >
            <svg
              aria-hidden="true"
              class=""
              data-icon="caret-down"
              fill="currentColor"
              focusable="false"
              height="1em"
              style="vertical-align:-0.125em"
              viewBox="0 0 1024 1024"
              width="1em"
            >
              <path
                d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
              />
            </svg>
          </span>
        </span>
        <span
          aria-grabbed="true"
          class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-open draggable"
          draggable="true"
          title="0-0-0"
        >
          <span
            class="ant-tree-title"
          >
            0-0-0
          </span>
        </span>
        <ul
          class="ant-tree-child-tree ant-tree-child-tree-open"
          data-expanded="true"
          role="group"
        >
          <li
            class="ant-tree-treenode-switcher-open"
            role="treeitem"
          >
            <span
              class="ant-tree-switcher ant-tree-switcher-noop"
            />
            <span
              aria-grabbed="true"
              class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal draggable"
              draggable="true"
              title="0-0-0-0"
            >
              <span
                class="ant-tree-title"
              >
                0-0-0-0
              </span>
            </span>
          </li>
          <li
            class="ant-tree-treenode-switcher-close"
            role="treeitem"
          >
            <span
              class="ant-tree-switcher ant-tree-switcher-noop"
            />
            <span
              aria-grabbed="true"
              class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal draggable"
              draggable="true"
              title="0-0-0-1"
            >
              <span
                class="ant-tree-title"
              >
                0-0-0-1
              </span>
            </span>
          </li>
          <li
            class="ant-tree-treenode-switcher-close"
            role="treeitem"
          >
            <span
              class="ant-tree-switcher ant-tree-switcher-noop"
            />
            <span
              aria-grabbed="true"
              class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal draggable"
              draggable="true"
              title="0-0-0-2"
            >
              <span
                class="ant-tree-title"
              >
                0-0-0-2
              </span>
            </span>
          </li>
        </ul>
      </li>
      <li
        class="ant-tree-treenode-switcher-close"
        role="treeitem"
      >
        <span
          class="ant-tree-switcher ant-tree-switcher_close"
        >
          <span
            aria-label="caret-down"
            class="anticon anticon-caret-down ant-tree-switcher-icon"
            role="img"
          >
            <svg
              aria-hidden="true"
              class=""
              data-icon="caret-down"
              fill="currentColor"
              focusable="false"
              height="1em"
              style="vertical-align:-0.125em"
              viewBox="0 0 1024 1024"
              width="1em"
            >
              <path
                d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
              />
            </svg>
          </span>
        </span>
        <span
          aria-grabbed="true"
          class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-close draggable"
          draggable="true"
          title="0-0-1"
        >
          <span
            class="ant-tree-title"
          >
            0-0-1
          </span>
        </span>
      </li>
      <li
        class="ant-tree-treenode-switcher-close"
        role="treeitem"
      >
        <span
          class="ant-tree-switcher ant-tree-switcher-noop"
        />
        <span
          aria-grabbed="true"
          class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal draggable"
          draggable="true"
          title="0-0-2"
        >
          <span
            class="ant-tree-title"
          >
            0-0-2
          </span>
        </span>
      </li>
    </ul>
  </li>
  <li
    class="ant-tree-treenode-switcher-close"
    role="treeitem"
  >
    <span
      class="ant-tree-switcher ant-tree-switcher_close"
    >
      <span
        aria-label="caret-down"
        class="anticon anticon-caret-down ant-tree-switcher-icon"
        role="img"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="caret-down"
          fill="currentColor"
          focusable="false"
          height="1em"
          style="vertical-align:-0.125em"
          viewBox="0 0 1024 1024"
          width="1em"
        >
          <path
            d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
          />
        </svg>
      </span>
    </span>
    <span
      aria-grabbed="true"
      class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-close draggable"
      draggable="true"
      title="0-1"
    >
      <span
        class="ant-tree-title"
      >
        0-1
      </span>
    </span>
  </li>
  <li
    class="ant-tree-treenode-switcher-close"
    role="treeitem"
  >
    <span
      class="ant-tree-switcher ant-tree-switcher-noop"
    />
    <span
      aria-grabbed="true"
      class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal draggable"
      draggable="true"
      title="0-2"
    >
      <span
        class="ant-tree-title"
      >
        0-2
      </span>
    </span>
  </li>
</ul>
`;

exports[`renders ./components/tree/demo/dynamic.md correctly 1`] = `
<ul
  class="ant-tree ant-tree-icon-hide"
  role="tree"
  unselectable="on"
>
  <li
    class="ant-tree-treenode-switcher-close"
    role="treeitem"
  >
    <span
      class="ant-tree-switcher ant-tree-switcher_close"
    >
      <span
        aria-label="caret-down"
        class="anticon anticon-caret-down ant-tree-switcher-icon"
        role="img"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="caret-down"
          fill="currentColor"
          focusable="false"
          height="1em"
          style="vertical-align:-0.125em"
          viewBox="0 0 1024 1024"
          width="1em"
        >
          <path
            d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
          />
        </svg>
      </span>
    </span>
    <span
      class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-close"
      title="Expand to load"
    >
      <span
        class="ant-tree-title"
      >
        Expand to load
      </span>
    </span>
  </li>
  <li
    class="ant-tree-treenode-switcher-close"
    role="treeitem"
  >
    <span
      class="ant-tree-switcher ant-tree-switcher_close"
    >
      <span
        aria-label="caret-down"
        class="anticon anticon-caret-down ant-tree-switcher-icon"
        role="img"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="caret-down"
          fill="currentColor"
          focusable="false"
          height="1em"
          style="vertical-align:-0.125em"
          viewBox="0 0 1024 1024"
          width="1em"
        >
          <path
            d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
          />
        </svg>
      </span>
    </span>
    <span
      class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-close"
      title="Expand to load"
    >
      <span
        class="ant-tree-title"
      >
        Expand to load
      </span>
    </span>
  </li>
  <li
    class=""
    role="treeitem"
  >
    <span
      class="ant-tree-switcher ant-tree-switcher-noop"
    />
    <span
      class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
      title="Tree Node"
    >
      <span
        class="ant-tree-title"
      >
        Tree Node
      </span>
    </span>
  </li>
</ul>
`;

exports[`renders ./components/tree/demo/line.md correctly 1`] = `
<ul
  class="ant-tree ant-tree-icon-hide ant-tree-show-line"
  role="tree"
  unselectable="on"
>
  <li
    class="ant-tree-treenode-switcher-open"
    role="treeitem"
  >
    <span
      class="ant-tree-switcher ant-tree-switcher_open"
    >
      <span
        aria-label="minus-square"
        class="anticon anticon-minus-square ant-tree-switcher-line-icon"
        role="img"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="minus-square"
          fill="currentColor"
          focusable="false"
          height="1em"
          style="vertical-align:-0.125em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M328 544h368c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8H328c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8z"
          />
          <path
            d="M880 112H144c-17.7 0-32 14.3-32 32v736c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V144c0-17.7-14.3-32-32-32zm-40 728H184V184h656v656z"
          />
        </svg>
      </span>
    </span>
    <span
      class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-open"
      title="parent 1"
    >
      <span
        class="ant-tree-title"
      >
        parent 1
      </span>
    </span>
    <ul
      class="ant-tree-child-tree ant-tree-child-tree-open"
      data-expanded="true"
      role="group"
    >
      <li
        class="ant-tree-treenode-switcher-open"
        role="treeitem"
      >
        <span
          class="ant-tree-switcher ant-tree-switcher_open"
        >
          <span
            aria-label="minus-square"
            class="anticon anticon-minus-square ant-tree-switcher-line-icon"
            role="img"
          >
            <svg
              aria-hidden="true"
              class=""
              data-icon="minus-square"
              fill="currentColor"
              focusable="false"
              height="1em"
              style="vertical-align:-0.125em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M328 544h368c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8H328c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8z"
              />
              <path
                d="M880 112H144c-17.7 0-32 14.3-32 32v736c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V144c0-17.7-14.3-32-32-32zm-40 728H184V184h656v656z"
              />
            </svg>
          </span>
        </span>
        <span
          class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-open"
          title="parent 1-0"
        >
          <span
            class="ant-tree-title"
          >
            parent 1-0
          </span>
        </span>
        <ul
          class="ant-tree-child-tree ant-tree-child-tree-open"
          data-expanded="true"
          role="group"
        >
          <li
            class="ant-tree-treenode-switcher-close"
            role="treeitem"
          >
            <span
              class="ant-tree-switcher ant-tree-switcher-noop"
            >
              <span
                aria-label="file"
                class="anticon anticon-file ant-tree-switcher-line-icon"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  class=""
                  data-icon="file"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  style="vertical-align:-0.125em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M854.6 288.6L639.4 73.4c-6-6-14.1-9.4-22.6-9.4H192c-17.7 0-32 14.3-32 32v832c0 17.7 14.3 32 32 32h640c17.7 0 32-14.3 32-32V311.3c0-8.5-3.4-16.7-9.4-22.7zM790.2 326H602V137.8L790.2 326zm1.8 562H232V136h302v216a42 42 0 0042 42h216v494z"
                  />
                </svg>
              </span>
            </span>
            <span
              class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
              title="leaf"
            >
              <span
                class="ant-tree-title"
              >
                leaf
              </span>
            </span>
          </li>
          <li
            class="ant-tree-treenode-switcher-close"
            role="treeitem"
          >
            <span
              class="ant-tree-switcher ant-tree-switcher-noop"
            >
              <span
                aria-label="file"
                class="anticon anticon-file ant-tree-switcher-line-icon"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  class=""
                  data-icon="file"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  style="vertical-align:-0.125em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M854.6 288.6L639.4 73.4c-6-6-14.1-9.4-22.6-9.4H192c-17.7 0-32 14.3-32 32v832c0 17.7 14.3 32 32 32h640c17.7 0 32-14.3 32-32V311.3c0-8.5-3.4-16.7-9.4-22.7zM790.2 326H602V137.8L790.2 326zm1.8 562H232V136h302v216a42 42 0 0042 42h216v494z"
                  />
                </svg>
              </span>
            </span>
            <span
              class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
              title="leaf"
            >
              <span
                class="ant-tree-title"
              >
                leaf
              </span>
            </span>
          </li>
          <li
            class="ant-tree-treenode-switcher-close"
            role="treeitem"
          >
            <span
              class="ant-tree-switcher ant-tree-switcher-noop"
            >
              <span
                aria-label="file"
                class="anticon anticon-file ant-tree-switcher-line-icon"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  class=""
                  data-icon="file"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  style="vertical-align:-0.125em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M854.6 288.6L639.4 73.4c-6-6-14.1-9.4-22.6-9.4H192c-17.7 0-32 14.3-32 32v832c0 17.7 14.3 32 32 32h640c17.7 0 32-14.3 32-32V311.3c0-8.5-3.4-16.7-9.4-22.7zM790.2 326H602V137.8L790.2 326zm1.8 562H232V136h302v216a42 42 0 0042 42h216v494z"
                  />
                </svg>
              </span>
            </span>
            <span
              class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
              title="leaf"
            >
              <span
                class="ant-tree-title"
              >
                leaf
              </span>
            </span>
          </li>
        </ul>
      </li>
      <li
        class="ant-tree-treenode-switcher-close"
        role="treeitem"
      >
        <span
          class="ant-tree-switcher ant-tree-switcher_close"
        >
          <span
            aria-label="plus-square"
            class="anticon anticon-plus-square ant-tree-switcher-line-icon"
            role="img"
          >
            <svg
              aria-hidden="true"
              class=""
              data-icon="plus-square"
              fill="currentColor"
              focusable="false"
              height="1em"
              style="vertical-align:-0.125em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M328 544h152v152c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V544h152c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8H544V328c0-4.4-3.6-8-8-8h-48c-4.4 0-8 3.6-8 8v152H328c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8z"
              />
              <path
                d="M880 112H144c-17.7 0-32 14.3-32 32v736c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V144c0-17.7-14.3-32-32-32zm-40 728H184V184h656v656z"
              />
            </svg>
          </span>
        </span>
        <span
          class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-close"
          title="parent 1-1"
        >
          <span
            class="ant-tree-title"
          >
            parent 1-1
          </span>
        </span>
      </li>
      <li
        class="ant-tree-treenode-switcher-close"
        role="treeitem"
      >
        <span
          class="ant-tree-switcher ant-tree-switcher_close"
        >
          <span
            aria-label="plus-square"
            class="anticon anticon-plus-square ant-tree-switcher-line-icon"
            role="img"
          >
            <svg
              aria-hidden="true"
              class=""
              data-icon="plus-square"
              fill="currentColor"
              focusable="false"
              height="1em"
              style="vertical-align:-0.125em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M328 544h152v152c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V544h152c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8H544V328c0-4.4-3.6-8-8-8h-48c-4.4 0-8 3.6-8 8v152H328c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8z"
              />
              <path
                d="M880 112H144c-17.7 0-32 14.3-32 32v736c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V144c0-17.7-14.3-32-32-32zm-40 728H184V184h656v656z"
              />
            </svg>
          </span>
        </span>
        <span
          class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-close"
          title="parent 1-2"
        >
          <span
            class="ant-tree-title"
          >
            parent 1-2
          </span>
        </span>
      </li>
    </ul>
  </li>
</ul>
`;

exports[`renders ./components/tree/demo/search.md correctly 1`] = `
<div>
  <span
    class="ant-input-search ant-input-affix-wrapper"
    style="margin-bottom:8px"
  >
    <input
      class="ant-input"
      placeholder="Search"
      type="text"
      value=""
    />
    <span
      class="ant-input-suffix"
    >
      <span
        aria-label="search"
        class="anticon anticon-search ant-input-search-icon"
        role="img"
        tabindex="-1"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="search"
          fill="currentColor"
          focusable="false"
          height="1em"
          style="vertical-align:-0.125em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M909.6 854.5L649.9 594.8C690.2 542.7 712 479 712 412c0-80.2-31.3-155.4-87.9-212.1-56.6-56.7-132-87.9-212.1-87.9s-155.5 31.3-212.1 87.9C143.2 256.5 112 331.8 112 412c0 80.1 31.3 155.5 87.9 212.1C256.5 680.8 331.8 712 412 712c67 0 130.6-21.8 182.7-62l259.7 259.6a8.2 8.2 0 0011.6 0l43.6-43.5a8.2 8.2 0 000-11.6zM570.4 570.4C528 612.7 471.8 636 412 636s-116-23.3-158.4-65.6C211.3 528 188 471.8 188 412s23.3-116.1 65.6-158.4C296 211.3 352.2 188 412 188s116.1 23.2 158.4 65.6S636 352.2 636 412s-23.3 116.1-65.6 158.4z"
          />
        </svg>
      </span>
    </span>
  </span>
  <ul
    class="ant-tree ant-tree-icon-hide"
    role="tree"
    unselectable="on"
  >
    <li
      class="ant-tree-treenode-switcher-close"
      role="treeitem"
    >
      <span
        class="ant-tree-switcher ant-tree-switcher_close"
      >
        <span
          aria-label="caret-down"
          class="anticon anticon-caret-down ant-tree-switcher-icon"
          role="img"
        >
          <svg
            aria-hidden="true"
            class=""
            data-icon="caret-down"
            fill="currentColor"
            focusable="false"
            height="1em"
            style="vertical-align:-0.125em"
            viewBox="0 0 1024 1024"
            width="1em"
          >
            <path
              d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
            />
          </svg>
        </span>
      </span>
      <span
        class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-close"
        title=""
      >
        <span
          class="ant-tree-title"
        >
          <span>
            <span
              style="color:#f50"
            />
            0-0
          </span>
        </span>
      </span>
    </li>
    <li
      class="ant-tree-treenode-switcher-close"
      role="treeitem"
    >
      <span
        class="ant-tree-switcher ant-tree-switcher_close"
      >
        <span
          aria-label="caret-down"
          class="anticon anticon-caret-down ant-tree-switcher-icon"
          role="img"
        >
          <svg
            aria-hidden="true"
            class=""
            data-icon="caret-down"
            fill="currentColor"
            focusable="false"
            height="1em"
            style="vertical-align:-0.125em"
            viewBox="0 0 1024 1024"
            width="1em"
          >
            <path
              d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
            />
          </svg>
        </span>
      </span>
      <span
        class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-close"
        title=""
      >
        <span
          class="ant-tree-title"
        >
          <span>
            <span
              style="color:#f50"
            />
            0-1
          </span>
        </span>
      </span>
    </li>
    <li
      class="ant-tree-treenode-switcher-close"
      role="treeitem"
    >
      <span
        class="ant-tree-switcher ant-tree-switcher-noop"
      />
      <span
        class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
        title=""
      >
        <span
          class="ant-tree-title"
        >
          <span>
            <span
              style="color:#f50"
            />
            0-2
          </span>
        </span>
      </span>
    </li>
  </ul>
</div>
`;
